--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ include ../config.mk
 INCLUDE_FLAGS=-I../include
 LIBS=
 
-OBJS=pkg.o pkgdb.o pkgdescr.o pkgutil.o
+OBJS=pkg.o pkgdb.o pkgdescr.o pkgutil.o pkgdb_bdb.o
 
 .PHONY: all clean
 
