Added libbz2 support

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,8 +3,10 @@ include ../config.mk
 INCLUDE_FLAGS=-I../include
 LIBS=
 
-OBJS=compression_gzip.o compression_none.o compression.o pkg.o pkgdb.o \
-	pkgdb_bdb.o pkgdb_text_file.o pkgdescr.o pkgpath.o pkgutil.o rbtree.o
+OBJS=\
+	compression_bzip2.o compression_gzip.o compression_none.o \
+	compression.o pkg.o pkgdb.o pkgdb_bdb.o pkgdb_text_file.o pkgdescr.o \
+	pkgpath.o pkgutil.o rbtree.o
 
 .PHONY: all clean
 
