--- a/src/Makefile
+++ b/src/Makefile
@@ -4,9 +4,9 @@ INCLUDE_FLAGS=-I../include
 LIBS=
 
 OBJS=\
-	pkg.o pkgdb.o pkgdb_bdb.o pkgdb_text_file.o pkgdescr.o pkgpath.o \
-	pkgutil.o rbtree.o streams_bzip2.o streams_gzip.o streams_none.o \
-	streams.o tar.o
+	md5.o pkg.o pkgdb.o pkgdb_bdb.o pkgdb_text_file.o pkgdescr.o \
+	pkgpath.o pkgutil.o rbtree.o streams_bzip2.o streams_gzip.o \
+	streams_none.o streams.o tar.o
 
 .PHONY: all clean
 
