--- a/src/Makefile
+++ b/src/Makefile
@@ -5,8 +5,8 @@ LIBS=
 
 OBJS=\
 	md5.o pkg.o pkgdb.o pkgdb_bdb.o pkgdb_text_file.o pkgdescr.o \
-	pkgpath.o pkgutil.o rbtree.o streams_bzip2.o streams_gzip.o \
-	streams_none.o streams.o tar.o unpack.o
+	pkgglobal.o pkgpath.o pkgutil.o rbtree.o streams_bzip2.o \
+	streams_gzip.o streams_none.o streams.o tar.o unpack.o
 
 .PHONY: all clean
 
