--- a/src/Makefile
+++ b/src/Makefile
@@ -4,9 +4,10 @@ INCLUDE_FLAGS=-I../include
 LIBS=
 
 OBJS=\
-	md5.o pkg.o pkgdb.o pkgdb_bdb.o pkgdb_text_file.o pkgdescr.o \
-	pkgglobal.o pkgpath.o pkgutil.o rbtree.o streams_bzip2.o \
-	streams_gzip.o streams_none.o streams.o tar.o unpack.o
+	install.o md5.o pkg.o pkgdb.o pkgdb_bdb.o pkgdb_text_file.o \
+	pkgdescr.o pkgglobal.o pkgpath.o pkgutil.o rbtree.o \
+	streams_bzip2.o streams_gzip.o streams_none.o streams.o \
+	tar.o unpack.o
 
 .PHONY: all clean
 
