Split emit setup stuff out from create.c so we can use it for convert too

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,9 +4,9 @@ INCLUDE_FLAGS=-I../include
 LIBS=
 
 OBJS=\
-	create.o createdb.o install.o md5.o pkg.o pkgdb.o pkgdb_text_file.o \
-	pkgdescr.o pkgglobal.o pkgpath.o pkgutil.o rbtree.o remove.o \
-	streams_none.o streams.o tar.o unpack.o
+	create.o createdb.o emit.o install.o md5.o pkg.o pkgdb.o \
+	pkgdb_text_file.o pkgdescr.o pkgglobal.o pkgpath.o pkgutil.o rbtree.o \
+	remove.o streams_none.o streams.o tar.o unpack.o
 
 ifdef CONFIG_BDB
 	OBJS+=pkgdb_bdb.o
