--- a/src/Makefile
+++ b/src/Makefile
@@ -6,8 +6,8 @@ LIBS=
 OBJS=\
 	convert.o convertdb.o create.o createdb.o dumpdb.o emit.o install.o \
 	md5.o pkg.o pkgdb.o pkgdb_text_file.o pkgdescr.o pkgglobal.o \
-	pkgpath.o pkgutil.o rbtree.o remove.o streams_none.o streams.o tar.o \
-	unpack.o
+	pkgpath.o pkgutil.o rbtree.o remove.o repairdb.o repairdb_passone.o \
+	streams.o streams_none.o tar.o unpack.o
 
 ifdef CONFIG_BDB
 	OBJS+=pkgdb_bdb.o
