BSD makefile fixes

--- a/Makefile.bsd
+++ b/Makefile.bsd
@@ -8,12 +8,12 @@ DIST_TARBALL=$(DIST_NAME).tar.gz
 .PHONY: all clean dist install strip
 
 all:
-	$(MAKE) -C man -f Makefile.bsd all
-	$(MAKE) -C src -f Makefile.bsd all
+	( cd man; $(MAKE) -f Makefile.bsd all )
+	( cd src; $(MAKE) -f Makefile.bsd all )
 
 clean:
-	$(MAKE) -C man -f Makefile.bsd clean
-	$(MAKE) -C src -f Makefile.bsd clean
+	( cd man; $(MAKE) -f Makefile.bsd clean )
+	( cd src; $(MAKE) -f Makefile.bsd clean )
 	$(RM) -f $(DIST_TARBALL)
 	$(RM) -rf $(DIST_STAGING)
 
@@ -30,9 +30,9 @@ dist:
 		$(DIST_TARBALL)
 
 strip:
-	$(MAKE) -C src -f Makefile.bsd strip
+	( cd src; $(MAKE) -f Makefile.bsd strip )
 
 install:
-	$(MAKE) -C man -f Makefile.bsd install
-	$(MAKE) -C src -f Makefile.bsd install
+	( cd man; $(MAKE) -f Makefile.bsd install )
+	( cd src; $(MAKE) -f Makefile.bsd install )
 
